# ilanta

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.py
cmake/: FindTensorFlow.cmake  Findgpiod.cmake  Findgpiodcxx.cmake  Findtensorrt.cmake  IlantaConfig.cmake.in  aarch64.cmake  ilantaConfig.cmake.in
ilanta/control/: pose.hpp
ilanta/hal/: logic_level.hpp
ilanta/hal/hw/: big_easy_driver.cpp  big_easy_driver.hpp  gpiod.cpp  gpiod.hpp  i2c.cpp  i2c.hpp  i2cdevice.cpp  i2cdevice.hpp  mcp4725.cpp  mcp4725.hpp  pca9685.cpp  pca9685.hpp  smbus.cpp  smbus.hpp  tca9548.cpp  tca9548.hpp
ilanta/io/: big_easy_driver.cpp  big_easy_driver.h  big_easy_driver.hpp  gpiod.cpp  gpiod.hpp  i2c.cpp  i2c.h  i2c.hpp  mcp4725.cpp  mcp4725.hpp  tca9548.cpp  tca9548.hpp  util.hpp
ilanta/linux/: fdesc.cpp  fdesc.hpp
ilanta/math/: util.hpp
ilanta/ml/: buffer_manager.cpp  buffer_manager.h  generic_buffer.h  ml_model.cpp  ml_model.hpp  tf_model.cpp  tf_model.h  tf_model.hpp  util.cpp  util.h
ilanta/util/: errors.hpp  file_desc.hpp  format.hpp  generics.hpp  result.hpp
include/ilanta/hal/: logic_level.hpp
include/ilanta/hal/hw/: big_easy_driver.hpp  mcp4725.hpp
include/ilanta/systems/: system.hpp
include/ilanta/util/: concurrent_queue.hpp  generics.hpp  result.hpp
src/hal/hw/: big_easy_driver.cpp  gpiod.cpp  pca9685.cpp
src/linux/: fdesc.cpp
test/: test.cpp
